--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 TARGET_NUMBER=62812xxxxxxx
 
 # Path/lokasi gambar yang akan dikirim
-IMAGE_PATH=./gambar.jpg
+IMAGE_PATH=./tmp/capture.jpeg
 
 # Caption/tulisan yang menyertai gambar (opsional)
 CAPTION=Ini gambar otomatis dikirim
