--- a/package.json
+++ b/package.json
@@ -1,17 +1,121 @@
 {
-  "name": "whatsapp-bot",
-  "version": "2.0.0",
+  "name": "jssecuritysystem",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+  "directories": {
+    "test": "test"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.24.0",
+    "agent-base": "^6.0.2",
+    "archiver": "^5.3.2",
+    "archiver-utils": "^2.1.0",
+    "async": "^3.2.6",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "big-integer": "^1.6.52",
+    "binary": "^0.3.0",
+    "bindings": "^1.5.0",
+    "bl": "^4.1.0",
+    "bluebird": "^3.4.7",
+    "brace-expansion": "^1.1.11",
+    "buffer": "^5.7.1",
+    "buffer-crc32": "^0.2.13",
+    "buffer-indexof-polyfill": "^1.0.2",
+    "buffers": "^0.1.1",
+    "chainsaw": "^0.1.0",
+    "child_process": "^1.0.2",
+    "chownr": "^1.1.4",
+    "compress-commons": "^4.1.2",
+    "concat-map": "^0.0.1",
+    "core-util-is": "^1.0.3",
+    "crc-32": "^1.2.2",
+    "crc32-stream": "^4.0.3",
+    "cross-fetch": "^3.1.5",
+    "debug": "^4.4.0",
+    "devtools-protocol": "^0.0.1045489",
+    "dotenv": "^16.5.0",
+    "duplexer2": "^0.1.4",
+    "end-of-stream": "^1.4.4",
+    "epoll": "^4.0.2",
+    "extract-zip": "^2.0.1",
+    "fd-slicer": "^1.1.0",
+    "file-uri-to-path": "^1.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-constants": "^1.0.0",
+    "fs-extra": "^10.1.0",
+    "fs.realpath": "^1.0.0",
+    "fstream": "^1.0.12",
+    "get-stream": "^5.2.0",
+    "glob": "^7.2.3",
+    "graceful-fs": "^4.2.11",
+    "https-proxy-agent": "^5.0.1",
+    "ieee754": "^1.2.1",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "jsonfile": "^6.1.0",
+    "lazystream": "^1.0.1",
+    "listenercount": "^1.0.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.defaults": "^4.2.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.union": "^4.6.0",
+    "mime": "^3.0.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.6",
+    "mkdirp-classic": "^0.5.3",
+    "ms": "^2.1.3",
+    "nan": "^2.22.2",
+    "node-fetch": "^2.7.0",
+    "node-webpmux": "^3.1.7",
+    "normalize-path": "^3.0.0",
+    "once": "^1.4.0",
+    "onoff": "^6.0.3",
+    "path-is-absolute": "^1.0.1",
+    "pend": "^1.2.0",
+    "pi-camera-connect": "^0.3.4",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.2",
+    "puppeteer": "^18.2.1",
+    "puppeteer-core": "^18.2.1",
     "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.3.1"
+    "readable-stream": "^3.6.2",
+    "readdir-glob": "^1.1.3",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.2.1",
+    "setimmediate": "^1.0.5",
+    "string_decoder": "^1.3.0",
+    "tar-fs": "^2.1.1",
+    "tar-stream": "^2.2.0",
+    "through": "^2.3.8",
+    "tr46": "^0.0.3",
+    "traverse": "^0.3.9",
+    "unbzip2-stream": "^1.4.3",
+    "undici-types": "^6.21.0",
+    "universalify": "^2.0.1",
+    "unzipper": "^0.10.14",
+    "util-deprecate": "^1.0.2",
+    "webidl-conversions": "^3.0.1",
+    "whatsapp-web.js": "^1.28.0",
+    "whatwg-url": "^5.0.0",
+    "which": "^1.3.1",
+    "wrappy": "^1.0.2",
+    "ws": "^8.9.0",
+    "yauzl": "^2.10.0",
+    "zip-stream": "^4.1.1"
   },
-  "devDependencies": {
-    "jest": "^29.7.0"
-  }
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start:debug": "NODE_OPTION='--trace-warnings'node index.js"
+  },
+  "author": "AIoTIdeaProject",
+  "license": "ISC"
 }
